hard-gists/5984815/run.log
=== Docker Run Log for 5984815 ===
Started at: Mi 29. Okt 16:11:06 CET 2025

[2025-10-29 16:11:06] START: Running container for 5984815
[2025-10-29 16:11:07] SUCCESS: Container 29d214fc21c7113d15c186e70b6b7f43ac23a0be6c837a0edd26aaa12f6e1eb4 started for 5984815
=== Container logs for 5984815 ===
  File "/snippet.py", line 21
    print "setData", index.row(), index.column(), value
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5984815 ===
[2025-10-29 16:11:09] INFO: Container 29d214fc21c7113d15c186e70b6b7f43ac23a0be6c837a0edd26aaa12f6e1eb4 has stopped
